--- a/3 Теги./31 Селектор потомков и классы/task31.3.css
+++ b/3 Теги./31 Селектор потомков и классы/task31.3.css
@@ -13,5 +13,8 @@
 
 
 
-
-
+/* Задание 5*/
+.eee h3.bbb {
+	color: red;
+}
+/* теперь выберем все h3 с классом bbb, находящиеся внутри элемента с классом eee;*/
