--- a/8 Флексы/100 Выравнивание флекс элементов по главной оси/task100.css
+++ b/8 Флексы/100 Выравнивание флекс элементов по главной оси/task100.css
@@ -1,22 +1,23 @@
+.parent{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end ;
+    width: 900px;
+    height: 400px;
+    margin: 20px auto;
+    border: 1px solid red;
+}
 #child, #child2, #child3, #child4, #child5{
     width: 120px;
     height: 60px;
     border: 1px solid green;
 
 }
-.parent{
-    display: flex;
-    flex-direction: row;
-    width: 900px;
-    height: 400px;
-    margin: 20px auto;
-    border: 1px solid red;
-}
-
 
 .parent2{
     display: flex;
     flex-direction: column;
+    justify-content: flex-end ;
     width: 900px;
     height: 400px;
     margin: 20px auto;
@@ -27,6 +28,7 @@
 .parent3{
     display: flex;
     flex-direction: row-reverse;
+    justify-content: flex-start ;
     width: 900px;
     height: 400px;
     margin: 20px auto;
@@ -36,7 +38,18 @@
 
 .parent4{
     display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-end ;
+    width: 900px;
+    height: 400px;
+    margin: 20px auto;
+    border: 1px solid red;
+}
+
+.parent5{
+    display: flex;
     flex-direction: column-reverse;
+    justify-content: flex-end ;
     width: 900px;
     height: 400px;
     margin: 20px auto;
