--- a/8 Флексы/100 Выравнивание флекс элементов по главной оси/task100.css
+++ b/8 Флексы/100 Выравнивание флекс элементов по главной оси/task100.css
@@ -1,3 +1,9 @@
+#child, #child2, #child3, #child4, #child5{
+    width: 120px;
+    height: 60px;
+    border: 1px solid green;
+
+}
 .parent{
     display: flex;
     flex-direction: row;
@@ -7,6 +13,7 @@
     margin: 20px auto;
     border: 1px solid red;
 }
+
 #child, #child2, #child3, #child4, #child5{
     width: 120px;
     height: 60px;
@@ -24,7 +31,6 @@
     border: 1px solid red;
 }
 
-
 .parent3{
     display: flex;
     flex-direction: row-reverse;
@@ -34,7 +40,6 @@
     margin: 20px auto;
     border: 1px solid red;
 }
-
 
 .parent4{
     display: flex;
